chore: Add Javadoc and format code